third_party/move/move-compiler-v2/tests/lambda/inline-parity/lambda_return.lambda.exp

Diagnostics:
error: Currently, lambda expressions must explicitly declare `move` capture of free variables, except when appearing as an argument to an inline functioncall.
  ┌─ tests/lambda/inline-parity/lambda_return.move:7:24
  │
7 │     let a = inline_apply2(|x| { x }, 3);
  │                           ^^^^^^^^^
